--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,7 @@
 buildCommand: ./render-build.sh && pip install -r requirements.txt
+startCommand: gunicorn app:app
 envVars:
   - key: PYTHON_VERSION
     value: 3.10.13
+  - key: ASTRA_DB_TOKEN
+    sync: false  # or set value here securely if you're not using dashboard secrets
